[package]
name = "os"
version = "0.1.0"
authors = ["Gstalker","Phosphorus15 <steepout@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
spin = "0.7.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }
kfat32 = { path = "../kfat32" }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[patch.'https://github.com/rust-lang/crates.io-index']
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[features]
board_k210 = []
board_qemu = []